plugins {
    alias(libs.plugins.spring.boot)
    alias(libs.plugins.spring.dependency.management)
    alias(libs.plugins.open.rewrite) apply false
    id("base")
}

allprojects {
    group = "sgc"
    version = "1.0.0"
    repositories {
        mavenCentral {
            mavenContent {
                releasesOnly()
            }
        }
        maven {
            url = uri("https://repo.spring.io/milestone")
            mavenContent {
                releasesOnly()
            }
        }
        maven {
            url = uri("https://repo.spring.io/snapshot")
            mavenContent {
                snapshotsOnly()
            }
        }
    }
}

subprojects {
    apply(plugin = "base")

    plugins.withId("java") {
        configure<JavaPluginExtension> {
            toolchain {
                languageVersion.set(JavaLanguageVersion.of(21))
            }
            sourceCompatibility = JavaVersion.VERSION_21
            targetCompatibility = JavaVersion.VERSION_21
        }
    }
}

// Delegation tasks for convenience
tasks.register("installFrontend") {
    group = "setup"
    description = "Instala as dependências do frontend (NPM)"
    dependsOn(":frontend:install")
}

tasks.register("buildFrontend") {
    group = "build"
    description = "Gera o build de produção do frontend (Vite)"
    dependsOn(":frontend:buildVue")
}

tasks.register<Copy>("copyFrontend") {
    group = "build"
    description = "Copia o frontend gerado para os recursos estáticos do backend"
    dependsOn("buildFrontend")
    from("frontend/dist")
    into("backend/src/main/resources/static")
}

tasks.register<Delete>("cleanFrontend") {
    group = "build"
    description = "Limpa o build do frontend"
    dependsOn(":frontend:clean")
}

tasks.register("frontendQualityCheck") {
    group = "quality"
    description = "Executa verificações de qualidade do frontend"
    dependsOn(":frontend:quality")
}

tasks.register("backendQualityCheck") {
    group = "quality"
    description = "Executa verificações de qualidade do backend"
    dependsOn(":backend:qualityCheck")
}

tasks.register("backendQualityCheckFast") {
    group = "quality"
    description = "Executa verificações de qualidade rápidas do backend"
    dependsOn(":backend:qualityCheckFast")
}

tasks.register("qualityCheckAll") {
    group = "quality"
    description = "Executa todas as verificações de qualidade (frontend e backend)"
    dependsOn("backendQualityCheck", "frontendQualityCheck")
}

tasks.register("qualityCheckFast") {
    group = "quality"
    description = "Executa verificações de qualidade rápidas (testes + cobertura) para frontend e backend"
    dependsOn("backendQualityCheckFast", ":frontend:test")
}
